fix project alignment

--- a/styles.css
+++ b/styles.css
@@ -440,7 +440,7 @@ b {
 .project-container {
     display: grid;
     column-gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     margin: 5rem;
     
 
@@ -467,7 +467,7 @@ b {
    
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    
     height: 100%;
 
 
@@ -821,7 +821,7 @@ b {
 
         display: grid;
     
-        grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     
     }
 
@@ -842,7 +842,7 @@ b {
 }
 
 /*tablet size*/
-@media (max-width: 1300px) and (min-width: 1100px) {
+@media  (min-width: 1101px) and (max-width: 1300px) {
 
     .nav__button:hover::after,
     .nav__button:hover::before {
@@ -852,7 +852,7 @@ b {
     .project-container {
         display: grid;
         column-gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
         margin: 3em 3em 3em 3em;
     }
 
